# stm32

./: .gitignore  .mxproject  CMakeLists.txt  STM32F410XX_FLASH.ld  stm32.ioc
Core/Src/: main.c  stm32f4xx_it.c
app1/: CMakeLists.txt  app_main.c
cmake/: gcc-arm-none-eabi.cmake  starm-clang.cmake
cmake/stm32cubemx/: CMakeLists.txt
modules/: CMakeLists.txt
modules/blinky/: blinky.c
modules/display/: display.cpp
modules/gps_gtu7/: gps_gtu7.c
modules/include/: blinky.h  display.h  log.h  tmr.h
modules_cpp/: CMakeLists.txt
